Add Prometheus and basic process metrics
